--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Sejam bem-vindos ao nosso website</p>  
     
     <a href="catalogo.html">Ir para a página de catálogo</a>
+    <a href="sobre.html">Sobre nós</a>
+
 </body>
 </html>
